// Minimized proto file for sourcekit-bazel-bsp.
// Only includes fields actually used by the BSP implementation.
// Original: https://github.com/bazelbuild/bazel/blob/master/src/main/protobuf/build.proto

syntax = "proto2";

package blaze_query;

// A rule attribute. Only the fields used by the BSP are included.
message Attribute {
  // Indicates the type of attribute.
  enum Discriminator {
    INTEGER = 1;
    STRING = 2;
    LABEL = 3;
    OUTPUT = 4;
    STRING_LIST = 5;
    LABEL_LIST = 6;
    OUTPUT_LIST = 7;
    DISTRIBUTION_SET = 8;
    LICENSE = 9;
    STRING_DICT = 10;
    FILESET_ENTRY_LIST = 11;
    LABEL_LIST_DICT = 12;
    STRING_LIST_DICT = 13;
    BOOLEAN = 14;
    TRISTATE = 15;
    INTEGER_LIST = 16;
    UNKNOWN = 18;
    LABEL_DICT_UNARY = 19;
    SELECTOR_LIST = 20;
    LABEL_KEYED_STRING_DICT = 21;
    DEPRECATED_STRING_DICT_UNARY = 17;
  }

  // The name of the attribute
  required string name = 1;

  // The type of attribute.
  required Discriminator type = 2;

  // The value of the attribute has a list of string values.
  repeated string string_list_value = 6;
}

// A rule instance (e.g., cc_library foo, java_binary bar).
message Rule {
  // The name of the rule (formatted as an absolute label, e.g. //foo/bar:baz).
  required string name = 1;

  // The rule class name (e.g., java_library).
  required string rule_class = 2;

  // All of the attributes that describe the rule.
  repeated Attribute attribute = 4;

  // All of the inputs to the rule (formatted as absolute labels).
  repeated string rule_input = 5;
}

// A file that is an input into the build system.
message SourceFile {
  // The name of the source file (a label).
  required string name = 1;

  // The location of the source file.
  optional string location = 2;
}

// A target from a blaze query execution.
message Target {
  enum Discriminator {
    RULE = 1;
    SOURCE_FILE = 2;
    GENERATED_FILE = 3;
    PACKAGE_GROUP = 4;
    ENVIRONMENT_GROUP = 5;
  }

  // The type of target contained in the message.
  required Discriminator type = 1;

  // If this target represents a rule, the rule is stored here.
  optional Rule rule = 2;

  // A file that is not generated by the build system.
  optional SourceFile source_file = 3;
}
